--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adn-frontend",
+  "name": "admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,21 +11,28 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
-    "axios": "^1.9.0",
-    "bootstrap": "^5.3.6",
+    "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
   }
 }
