--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
     "@stomp/stompjs": "^7.1.1",
+    "@uiw/react-md-editor": "^4.0.7",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.523.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^9.0.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.6.2",
     "sockjs-client": "^1.6.1"
   },
@@ -27,11 +33,14 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "connect-history-api-fallback": "^2.0.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
   }
 }
