--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.523.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
